# dataescape

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  UNITY_GIT_SETUP.md  check-status.bat  commit-docs.bat  fix-branch.bat  force-push.bat  install-git-lfs.bat  push-to-github.bat  pyproject.toml  setup-git.bat  setup-unity-git.bat  setup-unity-git.ps1  simple-git-setup.bat
.github/workflows/: ci-dotnet.yml  ci.yml
Assets/Prefabs/: GameManager.prefab
Assets/Scenes/: Chapter1_MirrorCorridor.unity  GameScene.unity  MainMenu.unity
Assets/Scripts/Core/: GameBuilder.cs  GameInitializer.cs  GameManager.cs  GameRunner.cs  GameSettings.cs  PlayerController.cs  PlayerSpawner.cs  TestGameSetup.cs
Assets/Scripts/Editor/: BuildAutomation.cs  GitIntegration.cs
Assets/Scripts/Networking/: NetworkManager.cs
Assets/Scripts/Puzzles/: BasePuzzle.cs  DataRestorationPuzzle.cs  MirrorReflectionPuzzle.cs
Assets/Scripts/UI/: MainMenuController.cs  UIManager.cs
ProjectSettings/: ProjectVersion.txt
src/speaker_sep/: __init__.py  annotation_filter.py  audio_io.py  cli.py  config.py  device.py  export.py  ingest.py  models.py  offline.py  preprocess.py  scene.py  separation.py  streaming.py  timeline.py
tests/: test_config.py  test_crowd_ingest.py  test_separation.py  test_timeline.py
